fix listing page